--- a/C#/ReactiveUiTemplates/WpfTemplates/Modules/Settings/SettingsView.xaml
+++ b/C#/ReactiveUiTemplates/WpfTemplates/Modules/Settings/SettingsView.xaml
@@ -1,16 +1,15 @@
-﻿<rxui:ReactiveUserControl 
-            x:Class="WpfTemplates.UserControls.Home.HomeView"
-            x:TypeArguments="local:HomeViewModel"
+﻿<rxui:ReactiveUserControl x:Class="WpfTemplates.Modules.Settings.SettingsView"
+            x:TypeArguments="local:SettingsViewModel"
             xmlns:rxui="http://reactiveui.net"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-            xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-            xmlns:local="clr-namespace:WpfTemplates.UserControls.Home"
+            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+            xmlns:local="clr-namespace:WpfTemplates.Modules.Settings"
             mc:Ignorable="d" 
-            Background="Green"
+            Background="Yellow"
             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="{Binding Message}" />
+        <TextBlock Text="SettingsView!" />
     </Grid>
 </rxui:ReactiveUserControl>
