--- a/C#/ReactiveUiTemplates/WpfTemplates/Resources/MainWindowChrome.xaml
+++ b/C#/ReactiveUiTemplates/WpfTemplates/Resources/MainWindowChrome.xaml
@@ -5,7 +5,7 @@
            TargetType="{x:Type Window}">
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
-                <WindowChrome />
+                <WindowChrome CaptionHeight="30"/>
             </Setter.Value>
         </Setter>
         <Setter Property="IsHitTestVisible"
@@ -23,6 +23,7 @@
                                                      Value="Maximized">
                                             <Setter Property="Margin"
                                                     Value="8" />
+
                                         </DataTrigger>
                                         <DataTrigger Binding="{Binding WindowState, RelativeSource={RelativeSource AncestorType=Window}}"
                                                      Value="Normal">
