--- a/C#/ReactiveUiTemplates/WpfTemplates/Sections/Home/HomeView.xaml
+++ b/C#/ReactiveUiTemplates/WpfTemplates/Sections/Home/HomeView.xaml
@@ -1,15 +1,16 @@
-﻿<rxui:ReactiveUserControl x:Class="WpfTemplates.Modules.Settings.SettingsView"
-            x:TypeArguments="local:SettingsViewModel"
+﻿<rxui:ReactiveUserControl 
+            x:Class="WpfTemplates.Sections.Home.HomeView"
+            x:TypeArguments="local:HomeViewModel"
             xmlns:rxui="http://reactiveui.net"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-            xmlns:local="clr-namespace:WpfTemplates.Modules.Settings"
+            xmlns:local="clr-namespace:WpfTemplates.Sections.Home"
             mc:Ignorable="d" 
-            Background="Yellow"
+            Background="Green"
             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="SettingsView!" />
+        <TextBlock x:Name="messageTextBlock" />
     </Grid>
 </rxui:ReactiveUserControl>
