--- a/C#/ReactiveUiTemplates/WpfTemplates/Sections/Settings/SettingsView.xaml
+++ b/C#/ReactiveUiTemplates/WpfTemplates/Sections/Settings/SettingsView.xaml
@@ -1,16 +1,16 @@
 ﻿<rxui:ReactiveUserControl 
-            x:Class="WpfTemplates.Modules.Home.HomeView"
-            x:TypeArguments="local:HomeViewModel"
+            x:Class="WpfTemplates.Sections.Settings.SettingsView"
+            x:TypeArguments="local:SettingsViewModel"
             xmlns:rxui="http://reactiveui.net"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-            xmlns:local="clr-namespace:WpfTemplates.Modules.Home"
+            xmlns:local="clr-namespace:WpfTemplates.Sections.Settings"
             mc:Ignorable="d" 
-            Background="Green"
+            Background="Yellow"
             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock x:Name="messageTextBlock" />
+        <TextBlock Text="SettingsView!" />
     </Grid>
 </rxui:ReactiveUserControl>
